--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -151,6 +151,7 @@ header{
     position: fixed;
     width: 100%;
     height: 130px;
+    z-index: 100;
 }
 
 nav{
@@ -348,4 +349,171 @@ footer{
 .contactform{
     padding-top: 150px;
     background-color: #2d2d2d;
+}
+
+.proyectos__container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.proyectos__titulo{
+    font-size: 100px;
+    width: 100vw;
+    margin-top: -100px;
+    padding-bottom: 100px;
+    color: #f183c3;
+    text-align: center;
+}
+.proyectos__imgcont{
+    display: grid;
+    grid-template-columns: 6 1fr;
+    grid-template-areas: 
+    "kuki kuki timestop timestop interwarp conan"
+    "kuki kuki picky gilipollas bedel bedel";
+    gap: 3px;
+}
+
+.proyectos__img{
+    overflow: hidden;
+}
+
+.proyectos__img img{
+    transform: scale(1.1);
+}
+
+.proyectos__img:hover img{
+    transform: scale(1.17);
+    transition: .5s;
+    opacity: .2;
+}
+
+.proyectos__texto{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    position: absolute;
+    visibility: hidden;
+}
+
+.proyectos__img:hover .proyectos__texto{
+    visibility: visible;
+    margin-top: -250px;
+    opacity: 1;
+    transition: 1s;
+}
+
+.kuki{
+    grid-area: kuki;
+}
+
+.timestop{
+    grid-area: timestop;
+}
+
+.interwarp{
+    grid-area: interwarp;
+}
+
+.conan{
+    grid-area: conan;
+}
+
+.picky{
+    grid-area: picky;
+}
+
+.gilipollas{
+    grid-area: gilipollas;
+}
+
+.bedel{
+    grid-area: bedel;
+}
+
+.habilidades{
+    margin-top: 100px;
+    height: 600px;
+    background-image: url(../img/fondorosa.jpg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.habilidades__titulo{
+    font-size: 100px;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.habilidades__logos{
+    width: 70%;
+    padding-top: 70px;
+    display: flex;
+    justify-content: space-around;
+}
+
+@keyframes mover{
+    from{
+        transform: translateY(0px);
+        filter: drop-shadow(0px 10px 1px rgba(0,0,0,.5));
+    }
+
+    to{
+        transform: translateY(-15px);
+        filter: drop-shadow(0px 35px 15px rgba(0,0,0,1));
+    }   
+}
+
+.illustrator{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+
+.photoshop{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 0.20s;
+    animation-timing-function: ease-in-out;
+}
+
+.premiere{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 0.40s;
+    animation-timing-function: ease-in-out;
+}
+
+.after{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 0.60s;
+    animation-timing-function: ease-in-out;
+}
+
+.corel{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 0.80s;
+    animation-timing-function: ease-in-out;
+}
+
+.wordpress{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 1s;
+    animation-timing-function: ease-in-out;
 }
