--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -23,6 +23,7 @@ a{
     text-decoration: none;
     font-weight: 600;
     font-size: 1.25rem;
+    color: #fff;
 }
 a:hover{
     color: #f183c3;
@@ -42,11 +43,13 @@ a:hover{
 
 footer{
     background-color: #2d2d2d;
+    max-width: 100vw;
 }
 
-.contactform{
-    padding-top: 150px;
-    background-color: #2d2d2d;
+li{
+    text-decoration: none;
+    list-style-type: none;
+    font-weight: 900;
 }
 
 html{
@@ -58,15 +61,23 @@ img{
     width: 100%;
 }
 
+h4{
+    font-size: clamp(10px, 10px + 1vw, 20px);
+    font-weight: 900;
+    text-transform: uppercase;
+    text-decoration: underline #f183c3; 
+}
+
 /* Header y navbar, ésta última formada por funciones de bootstrap 5.1 y modificada segun las necesidades propias*/
 
 header{
-    background-color:#121212;
+    background-color:#262626;
     position: fixed;
-    width: 100%;
     z-index: 10;
+    top: 0;
+    width: 100%;
     height: clamp(65px, 10vw, 130px);
-    box-shadow: 10px 0px 5px #262626;
+    box-shadow: 0px 2px 10px #121212;
 }
 
 .navbar{
@@ -99,6 +110,7 @@ header{
     background-color: #262626;
     margin: 8px -12px;
     padding-left: 12px;
+    box-shadow: 0px 2px 10px #121212;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -146,7 +158,7 @@ nav li{
 }
 
 .titulo-hero{
-    font-size: clamp(5vw, 8vh , 60px);
+    font-size: clamp(5vw, 6vh , 60px);
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     font-weight: 100;
@@ -202,9 +214,9 @@ span{
 .conoceme p{
     font-size: 14px;
     grid-area: parrafo;
-    width: 100vw;
+    max-width: 100vw;
     text-align: center;
-    padding: 0px 10px;
+    padding: 15px 10px;
 }
 
 .conoceme__foto-container img{
@@ -252,7 +264,7 @@ span{
 }
 
 .trabajos__ind{
-    margin: 50px;
+    margin: 50px 0px;
     width: 256px;
     height: 256px;
     background-color: #2d2d2d;
@@ -295,8 +307,6 @@ h3{
 
 
 /* Tarjetas proyectos*/
-
-
 
 .proyectos__container{
     display: flex;
@@ -387,11 +397,11 @@ h3{
 }
 
 
-/* Tarjetas proyectos*/
+/* Logos habilidades con animaciones*/
 
 .habilidades{
     margin-top: 50px;
-    height: 600px;
+    height: 470px;
     background-image: url(../img/fondorosa.jpg);
     display: flex;
     flex-direction: column;
@@ -399,16 +409,24 @@ h3{
 }
 
 .habilidades__titulo{
-    font-size: 100px;
+    font-size: 40px;
     text-align: center;
+    width: 80vw;
+    font-weight: 900;
     padding-top: 50px;
 }
 
 .habilidades__logos{
     width: 70%;
-    padding-top: 70px;
+    padding-top: 20px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.habilidades__logos div{
+    width: min(90px, 25vw);
+    margin: 9px;
 }
 
 @keyframes mover{
@@ -436,7 +454,6 @@ h3{
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    animation-delay: 0.20s;
     animation-timing-function: ease-in-out;
 }
 
@@ -445,7 +462,7 @@ h3{
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    animation-delay: 0.40s;
+    animation-delay: 0.20s;
     animation-timing-function: ease-in-out;
 }
 
@@ -454,7 +471,7 @@ h3{
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    animation-delay: 0.60s;
+    animation-delay: 0.20s;
     animation-timing-function: ease-in-out;
 }
 
@@ -463,7 +480,7 @@ h3{
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    animation-delay: 0.80s;
+    animation-delay: 0.40s;
     animation-timing-function: ease-in-out;
 }
 
@@ -472,9 +489,62 @@ h3{
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-    animation-delay: 1s;
+    animation-delay: 0.4s;
     animation-timing-function: ease-in-out;
 }
+
+/* Footer */
+
+.footer__container{
+    display: grid; 
+    grid-template-columns: 0.6fr 1.2fr; 
+    gap: 6px; 
+    grid-template-areas: 
+        "foto contacto"
+        "foto pagina";
+    padding-top: 30px;
+}
+
+.footer__paginas{
+    display: flex;
+    flex-direction: column;
+    grid-area: pagina;
+    margin-left: 30px;
+}
+
+.footer__imgContainer{
+    grid-area: foto;
+    width: 100px;
+    justify-self: end ;
+}
+
+.footer__contacto{
+    display: flex;
+    flex-direction: column;
+    grid-area: contacto;
+    margin-left: 30px;
+}
+
+.footer__container ul{
+    padding-left: 0;
+}
+
+.footer__container a{
+    font-size: 10px;
+}
+
+.footer__contacto p{
+    font-size: 12px;
+    margin-bottom: 6px;
+}
+
+.footer__contacto--img{
+    width: 50px;
+}
+
+
+
+
 
 /*
 @media only screen and (min-width: 992px) {
@@ -673,4 +743,91 @@ h3{
 
 .bedel{
     grid-area: bedel;
+}
+
+.habilidades{
+    margin-top: 50px;
+    height: 600px;
+    background-image: url(../img/fondorosa.jpg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.habilidades__titulo{
+    font-size: 100px;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.habilidades__logos{
+    width: 70%;
+    padding-top: 70px;
+    display: flex;
+    justify-content: space-around;
+}
+
+@keyframes mover{
+    from{
+        transform: translateY(0px);
+        filter: drop-shadow(0px 10px 1px #26262648);
+    }
+
+    to{
+        transform: translateY(-15px);
+        filter: drop-shadow(0px 25px 12px #2d2d2dee);
+    }   
+}
+
+.illustrator{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+
+.photoshop{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 0.20s;
+    animation-timing-function: ease-in-out;
+}
+
+.premiere{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 0.40s;
+    animation-timing-function: ease-in-out;
+}
+
+.after{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 0.60s;
+    animation-timing-function: ease-in-out;
+}
+
+.corel{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 0.80s;
+    animation-timing-function: ease-in-out;
+}
+
+.wordpress{
+    animation-name: mover;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-delay: 1s;
+    animation-timing-function: ease-in-out;
 }
