--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat:wght@100;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat:wght@100;300;800&display=swap');
 
 /* Estilos generales del sitio*/
 * {
@@ -59,6 +58,19 @@ html{
 
 img{
     width: 100%;
+}
+
+h1{
+    margin-top: 30px;
+    margin-bottom: 0;
+    font-weight: 900;
+    font-size: clamp(41px, 15vw , 60px);
+    text-align: center;
+}
+
+h2{
+    font-weight: 900;
+    text-align: center;
 }
 
 h4{
@@ -132,7 +144,7 @@ nav li{
 
 .navbar-dark .navbar-toggler {
     border-color: #f183c3;
-
+    color: #f183c3;
 }
 
 /* Hero de la página principal*/
@@ -204,11 +216,6 @@ span{
 
 .conoceme h1{
     grid-area: titulo;
-    margin-top: 30px;
-    margin-bottom: 0;
-    font-weight: 900;
-    font-size: clamp(41px, 15vw , 60px);
-    text-align: center;
 }
 
 .conoceme p{
@@ -541,6 +548,85 @@ h3{
 .footer__contacto--img{
     width: 50px;
 }
+
+
+/* Página de contacto*/
+
+.hero__contacto{
+    margin-top: clamp(65px, 25vw, 100px);
+    background-image: url(../img/fondorosa.jpg);
+    background-size: cover;
+    max-width: 100vw;
+}
+
+.contactform__container{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 100vw;
+    margin-top: 20px;
+    background-image: url(../img/OhCherry-Background.jpg);
+    background-repeat: no-repeat;
+    background-position: right center;
+}
+
+.contactform__img{
+    display: none;
+}
+
+.contact-form{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.form-floating>.form-control {
+    background-color: transparent;
+    border: 1px solid #f183c3;
+    color: #fff;
+}
+
+.form-floating>label{
+    color: #f183c3;
+    font-weight: 300;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #f183c3;
+    border-color: #f183c3;
+    margin: 20px 0px;
+    font-weight: 900;
+}
+
+.btn-check:active+.btn-primary:focus, .btn-check:checked+.btn-primary:focus, .btn-primary.active:focus, .btn-primary:active:focus, .show>.btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.25rem #f183c3;
+}
+
+.btn-primary:hover {
+    color: #f183c3;
+    background-color: #fff;
+    border-color: #f183c3;
+}
+
+.form-control:focus {
+    color: #fff;
+    background-color: transparent;
+    border-color: #f183c3;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem transparent;
+}
+
+.btn-check:focus+.btn-primary, .btn-primary:focus {
+    color: #f183c3;
+    background-color: transparent;
+    border-color: #f183c3;
+    box-shadow: 0 0 0 0.25rem rgba(49, 131, 253, 0);
+}
+
+
+
+
 
 
 
