--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -507,8 +507,8 @@ h3{
     grid-template-columns: 0.6fr 1.2fr; 
     gap: 6px; 
     grid-template-areas: 
-        "foto contacto"
-        "foto pagina";
+        "foto pagina"
+        "foto contacto";
     padding-top: 30px;
 }
 
@@ -516,7 +516,7 @@ h3{
     display: flex;
     flex-direction: column;
     grid-area: pagina;
-    margin-left: 30px;
+    margin-left: 15px;
 }
 
 .footer__imgContainer{
@@ -529,7 +529,7 @@ h3{
     display: flex;
     flex-direction: column;
     grid-area: contacto;
-    margin-left: 30px;
+    margin-left: 15px;
 }
 
 .footer__container ul{
@@ -557,6 +557,12 @@ h3{
     background-image: url(../img/fondorosa.jpg);
     background-size: cover;
     max-width: 100vw;
+}
+
+.hero__contacto--titulo{
+    text-align: end;
+    font-size: clamp(40px, 12vw , 60px);
+    margin-right: 10px;
 }
 
 .contactform__container{
@@ -624,6 +630,47 @@ h3{
     box-shadow: 0 0 0 0.25rem rgba(49, 131, 253, 0);
 }
 
+.contacto__section{
+    background-color: #f183c3;
+    max-width: 100vw;
+    margin: 0;
+}
+
+.contacto__logos--container h3{
+    font-size: 9px ;
+    font-weight: 900;
+    color: #262626;
+}
+
+.contacto__logo{
+    display: flex;
+    justify-content: center;
+}
+
+.contacto__logo img{
+    width: 50%;
+    margin-top: 10px;
+}
+
+
+/* Página de Mi historia*/
+
+.hero__historia{
+    margin-top: clamp(65px, 25vw, 100px);
+    background-image: url(../img/fondorosa.jpg);
+    background-size: cover;
+    max-width: 100vw;
+}
+
+.hero__historia--titulo{
+    text-align: end;
+    font-size: clamp(40px, 12vw , 60px);
+    margin-right: 10px;
+}
+
+.sobreMi{
+    margin-top: 20px;
+}
 
 
 
