--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -558,7 +558,7 @@ h3{
 /* Página de contacto*/
 
 .hero__contacto{
-    margin-top: clamp(65px, 25vw, 115px);
+    margin-top: clamp(65px, 17vw, 130px);
     background-image: url(../img/fondorosa.jpg);
     background-size: cover;
     max-width: 100vw;
@@ -638,7 +638,8 @@ h3{
 .contacto__section{
     background-color: #f183c3;
     max-width: 100vw;
-    margin: 0;
+    margin-top: 30px;
+    justify-content: center;
 }
 
 .contacto__logos--container h3{
@@ -661,15 +662,15 @@ h3{
 /* Página de Mi historia*/
 
 .hero__historia{
-    margin-top: clamp(65px, 25vw, 115px);
+    margin-top: clamp(65px, 17vw, 130px);
     background-image: url(../img/fondorosa.jpg);
     background-size: cover;
-    max-width: 100vw;
+    max-width: 1240vw;
 }
 
 .hero__historia--titulo{
     text-align: end;
-    font-size: clamp(40px, 12vw , 60px);
+    font-size: clamp(40px, 17vw , 60px);
     margin-right: 10px;
 }
 
@@ -724,6 +725,10 @@ grid-area: s-foto;
 
 .conocimientos__img{
     width: 60px;
+}
+
+.video__container{
+    width: 250px;
 }
 
 @media only screen and (min-width: 416px) {
@@ -916,9 +921,100 @@ grid-area: s-foto;
     }
     .trayectoria {
         margin-top: 30px;
+        background: rgb(241,131,195);
+        background: linear-gradient(90deg, rgba(241,131,195,1) 0%, rgba(241,131,195,1) 70%, rgba(38,38,38,1) 70%, rgba(38,38,38,1) 100%);
+    }
+    .trayectoria h2 {
+        grid-area: t-titulo;
+        align-self: flex-end;
+        justify-self: flex-end;
+    }
+    .trayectoria__img{
+        width: 350px;
+        grid-area: t-foto;
+    }
+    .trayectoria p{
+        grid-area: t-parrafo;
+        text-align: start;
+        align-self: flex-start;
+    }
+}
+
+    @media only screen and (min-width: 992px) {
+    .conoceme{
+        max-width: 1240px;
+    }
+    .conoceme h1{
+        align-self: flex-end;
+    }
+    .conoceme p{
+        align-self: center;
+    }
+    .conoceme__foto-container{
+        width: 550px;
+    }
+    .boton-conoceme{
+        align-self: flex-start ;
+    }
+    .trabajos{
+        max-width: 1240px;
+        gap: 100px;
+    }
+    .proyectos__imgcont{
+        grid-template-columns: 6 1fr;
+        grid-template-areas: 
+        "kuki kuki timestop timestop interwarp conan"
+        "kuki kuki picky gilipollas bedel bedel";
+        gap: 3px;
+    }
+    .proyectos__imgcont img{
+        width: auto;
+    }
+    .habilidades__logos{
+        max-width: 1240px;
+    }
+    .photoshop{
+        animation-delay: 0.20s;
+    }
+    
+    .premiere{
+        animation-delay: 0.40s;
+    }
+    
+    .after{
+        animation-delay: 0.60s;
+    }
+    
+    .corel{
+        animation-delay: 0.80s;
+    }
+    
+    .wordpress{
+        animation-delay: 1s;
+    }
+    .sobreMi{
+        max-width: 1240px;
+    }
+    .hero__historia--banner{
+        max-width: 1240px;
+    }
+    .sobreMi__img{
+        width: 550px;
+    }
+    .footer__container{
+        max-width: 1240px;
+    }
+    .trayectoria{
+        max-width: 1240px;
+    }
+    .hero__contacto--banner{
+        max-width: 1240px;
     }
 
 
+    .col-sm-3 {
+        width: min(25%, 290px);
+    }
 
 
 
