--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,154 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat:wght@100;300;800&display=swap');
-
-/* Estilos generales del sitio*/
-* {
-    padding: 0;
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    color: #fff;
-    box-sizing: border-box;
-}
-
-body{
-    background-color: #262626;
-}
-
-p{
-    font-family: 'Barlow', sans-serif;
-    font-size: 0.875rem;
-    max-width: 100vw;
-    text-align: center;
-    padding: 0.9375rem 0.625rem;
-}
-
-a{
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 1.25rem;
-    color: #fff;
-}
-a:hover{
-    color: #f183c3;
-}
-
-.boton{
-    color: #f183c3;
-    border: 2px solid #f183c3;
-    padding: 0.9375rem 1.5625rem;
-    border-radius: 0.625rem;
-    height: 6.25rem;
-}
-.boton:hover{
-    color: #fff;
-    background-color: #f183c3;
-}
-
-footer{
-    background-color: #2d2d2d;
-    max-width: 100vw;
-}
-
-li{
-    text-decoration: none;
-    list-style-type: none;
-    font-weight: 900;
-}
-
-html{
-    scroll-behavior: smooth;
-    scroll-padding-top: clamp(65px, 20vw, 130px);
-}
-
-img{
-    width: 100%;
-}
-
-h1{
-    margin-top: 30px;
-    margin-bottom: 0;
-    font-weight: 900;
-    font-size: clamp(41px, 15vw , 60px);
-    text-align: center;
-}
-
-h2{
-    font-weight: 900;
-    text-align: center;
-}
-
-h4{
-    font-size: clamp(10px, 10px + 1vw, 20px);
-    font-weight: 900;
-    text-transform: uppercase;
-    text-decoration: underline #f183c3; 
-}
-
-/* Header y navbar, ésta última formada por funciones de bootstrap 5.1 y modificada segun las necesidades propias*/
-
-header{
-    background-color:#262626;
-    position: fixed;
-    z-index: 10;
-    top: 0;
-    width: 100%;
-    height: clamp(65px, 10vw, 130px);
-    box-shadow: 0px 2px 10px #121212;
-}
-
-.navbar{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    height: 100%;
-}
-
-.navbar>.container-fluid{
-    height: 100%;
-}
-
-.navbar-brand{
-    display: flex;
-    align-items: center;
-    height: 100%;
-    max-width: min(251px, 60%);
-}
-
-.navbar-brand img{
-    width: 100%;
-}
-
-.navbar-toggler{
-    font-size: min(.8rem + 1vw, 2rem);
-}
-
-.navbar-collapse {
-    background-color: #262626;
-    margin: 8px -12px;
-    padding-left: 12px;
-    box-shadow: 0px 2px 10px #121212;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-    color: #fff;
-    font-size: clamp(10px, 10px + 1vw, 20px);
-}
-
-.navbar-dark .navbar-nav .nav-link:hover {
-    color: #f183c3;
-}
-
-nav li{
-    padding: 0.4375rem;
-}
-
-.navbar-dark .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-}
-
-.navbar-dark .navbar-toggler {
-    border-color: #f183c3;
-    color: #f183c3;
-}
+@import "variables";
+@import "fuentes";
+@import "generales";
+@import "header";
 
 /* Hero de la página principal*/
 
@@ -939,7 +792,7 @@ grid-area: s-foto;
     }
 }
 
-    @media only screen and (min-width: 992px) {
+    @media only screen and (min-width: 1024px) {
     .conoceme{
         max-width: 1240px;
     }
