--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -2,12 +2,12 @@
     padding: 0;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    color: #fff;
+    color: $blanco;
     box-sizing: border-box;
 }
 
 body{
-    background-color: $color_primario;
+    background-color: $color_secundario;
 }
 
 p{
@@ -22,26 +22,26 @@ a{
     text-decoration: none;
     font-weight: 600;
     font-size: 1.25rem;
-    color: #fff;
+    color: $blanco;
 }
 a:hover{
-    color: #f183c3;
+    color: $color_primario;
 }
 
 .boton{
-    color: #f183c3;
-    border: 2px solid #f183c3;
+    color: $color_primario;
+    border: 2px solid $color_primario;
     padding: 0.9375rem 1.5625rem;
     border-radius: 0.625rem;
     height: 6.25rem;
 }
 .boton:hover{
-    color: #fff;
-    background-color: #f183c3;
+    color: $blanco;
+    background-color: $color_primario;
 }
 
 footer{
-    background-color: #2d2d2d;
+    background-color: $color_complementario;
     max-width: 100vw;
 }
 
@@ -64,7 +64,7 @@ h1{
     margin-top: 30px;
     margin-bottom: 0;
     font-weight: 900;
-    font-size: clamp(41px, 15vw , 60px);
+    font-size: $responsive_size-a;
     text-align: center;
 }
 
@@ -77,5 +77,5 @@ h4{
     font-size: clamp(10px, 10px + 1vw, 20px);
     font-weight: 900;
     text-transform: uppercase;
-    text-decoration: underline #f183c3; 
+    text-decoration: underline $color_primario; 
 }
