--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,5 @@
 header{
-    background-color:#262626;
+    background-color: $color_secundario;
     position: fixed;
     z-index: 10;
     top: 0;
@@ -26,28 +26,26 @@ header{
     max-width: min(251px, 60%);
 }
 
-.navbar-brand img{
-    width: 100%;
-}
+
 
 .navbar-toggler{
     font-size: min(.8rem + 1vw, 2rem);
 }
 
 .navbar-collapse {
-    background-color: #262626;
+    background-color: $color_secundario;
     margin: 8px -12px;
     padding-left: 12px;
     box-shadow: 0px 2px 10px #121212;
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: #fff;
+    color: $blanco;
     font-size: clamp(10px, 10px + 1vw, 20px);
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
-    color: #f183c3;
+    color: $color_primario;
 }
 
 nav li{
@@ -59,6 +57,6 @@ nav li{
 }
 
 .navbar-dark .navbar-toggler {
-    border-color: #f183c3;
-    color: #f183c3;
+    border-color: $color_primario;
+    color: $color_primario;
 }
