--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,9 +42,9 @@ span{
 }
 
 .boton-hero .boton{
-    color: #f183c3;
-    background-color: #fff;
-    border: #fff;
+    color: $color_primario;
+    background-color: $blanco;
+    border: $blanco;
 }
 
 .boton-hero a{
@@ -105,7 +105,7 @@ span{
 /* Seccion Tarjetas de trabajos*/
 
 .trabajos__titulo{
-    color: #f183c3;
+    color: $color_primario;
     font-size: clamp(41px, 15vw , 60px);
     text-align: center;
     font-weight: 900;
@@ -139,7 +139,7 @@ span{
 }
 
 h3{
-    color: #f183c3;
+    color: $color_primario;
     font-size: 25px;
     margin: 10%;
     font-weight: 900;
@@ -181,7 +181,7 @@ h3{
     width: 90vw;
     margin-top: 50px;
     padding-bottom: 50px;
-    color: #f183c3;
+    color: $color_primario;
     text-align: center;
 }
 .proyectos__imgcont{
@@ -446,50 +446,50 @@ h3{
 
 .form-floating>.form-control {
     background-color: transparent;
-    border: 1px solid #f183c3;
-    color: #fff;
+    border: 1px solid $color_primario;
+    color: $blanco;
 }
 
 .form-floating>label{
-    color: #f183c3;
+    color: $color_primario;
     font-weight: 300;
 }
 
 .btn-primary {
-    color: #fff;
-    background-color: #f183c3;
-    border-color: #f183c3;
+    color: $blanco;
+    background-color: $color_primario;
+    border-color: $color_primario;
     margin: 20px 0px;
     font-weight: 900;
 }
 
 .btn-check:active+.btn-primary:focus, .btn-check:checked+.btn-primary:focus, .btn-primary.active:focus, .btn-primary:active:focus, .show>.btn-primary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.25rem #f183c3;
+    box-shadow: 0 0 0 0.25rem $color_primario;
 }
 
 .btn-primary:hover {
-    color: #f183c3;
-    background-color: #fff;
-    border-color: #f183c3;
+    color: $color_primario;
+    background-color: $blanco;
+    border-color: $color_primario;
 }
 
 .form-control:focus {
-    color: #fff;
+    color: $blanco;
     background-color: transparent;
-    border-color: #f183c3;
+    border-color: $color_primario;
     outline: 0;
     box-shadow: 0 0 0 0.25rem transparent;
 }
 
 .btn-check:focus+.btn-primary, .btn-primary:focus {
-    color: #f183c3;
+    color: $color_primario;
     background-color: transparent;
-    border-color: #f183c3;
+    border-color: $color_primario;
     box-shadow: 0 0 0 0.25rem rgba(49, 131, 253, 0);
 }
 
 .contacto__section{
-    background-color: #f183c3;
+    background-color: $color_primario;
     max-width: 100vw;
     margin-top: 30px;
     justify-content: center;
@@ -498,7 +498,7 @@ h3{
 .contacto__logos--container h3{
     font-size: 10px ;
     font-weight: 900;
-    color: #262626;
+    color: $color_secundario;
 }
 
 .contacto__logo{
@@ -537,7 +537,7 @@ grid-area: s-foto;
 }
 
 .trayectoria{
-    background-color: #f183c3;
+    background-color: $color_primario;
 }
 
 .trayectoria h2{
@@ -566,7 +566,7 @@ grid-area: s-foto;
 
 .conocimientos__logo h3{
     font-size: 12px;
-    color: #fff;
+    color: $blanco;
     margin: 0px 5px;
 }
 
@@ -693,14 +693,14 @@ grid-area: s-foto;
         font-size: clamp(5vw, 10vh , 70px);
     }
     .navbar-collapse {
-        box-shadow: 0px 0px 0px #ffffff00;
+        box-shadow: 0px 0px 0px #00000000;
     }
     .boton-hero a {
         font-size: clamp(2vw, 3vh , 40px);
     }    
     .boton-hero a:hover {
-        color: #fff;
-        background-color: #262626;
+        color: $blanco;
+        background-color: $color_secundario;
         font-size: clamp(2vw, 3vh , 40px);
     }
     .conoceme{
