--- a/styles/style.css
+++ b/styles/style.css
@@ -484,6 +484,137 @@ nav li {
           animation-timing-function: ease-in-out;
 }
 
+.footer__container {
+  display: grid;
+  grid-template-columns: 0.6fr 1.2fr;
+  gap: 6px;
+  grid-template-areas: "foto pagina" "foto contacto";
+  padding-top: 30px;
+}
+.footer__container .footer__imgContainer {
+  grid-area: foto;
+  width: 100px;
+  justify-self: end;
+}
+.footer__container .footer__paginas {
+  display: flex;
+  flex-direction: column;
+  grid-area: pagina;
+  margin-left: 15px;
+}
+.footer__container .footer__contacto {
+  display: flex;
+  flex-direction: column;
+  grid-area: contacto;
+  margin-left: 15px;
+}
+.footer__container .footer__contacto p {
+  font-size: 12px;
+  margin-bottom: 6px;
+  text-align: start;
+  padding: 0;
+}
+.footer__container ul {
+  padding-left: 0;
+}
+.footer__container a {
+  font-size: 10px;
+}
+
+.hero__contacto {
+  margin-top: clamp(65px, 17vw, 130px);
+  background-image: url(../img/fondorosa.jpg);
+  background-size: cover;
+  max-width: 100vw;
+}
+.hero__contacto h1 {
+  text-align: end;
+  font-size: clamp(40px, 12vw, 60px);
+  margin-right: 10px;
+}
+
+.contactform__container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 100vw;
+  margin-top: 20px;
+  background-image: url(../img/OhCherry-Background.jpg);
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+.contactform__container .contactform__img {
+  display: none;
+}
+.contactform__container .contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-floating > .form-control {
+  background-color: transparent;
+  border: 1px solid #f183c3;
+  color: #fff;
+}
+
+.form-floating > label {
+  color: #f183c3;
+  font-weight: 300;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #f183c3;
+  border-color: #f183c3;
+  margin: 20px 0px;
+  font-weight: 900;
+}
+
+.btn-check:active + .btn-primary:focus, .btn-check:checked + .btn-primary:focus, .btn-primary.active:focus, .btn-primary:active:focus, .show > .btn-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.25rem #f183c3;
+}
+
+.btn-primary:hover {
+  color: #f183c3;
+  background-color: #fff;
+  border-color: #f183c3;
+}
+
+.form-control:focus {
+  color: #fff;
+  background-color: transparent;
+  border-color: #f183c3;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem transparent;
+}
+
+.btn-check:focus + .btn-primary, .btn-primary:focus {
+  color: #f183c3;
+  background-color: transparent;
+  border-color: #f183c3;
+  box-shadow: 0 0 0 0.25rem rgba(49, 131, 253, 0);
+}
+
+.contacto__section {
+  background-color: #f183c3;
+  max-width: 100vw;
+  margin-top: 30px;
+  justify-content: center;
+}
+.contacto__section .contacto__logos--container h3 {
+  font-size: 10px;
+  font-weight: 900;
+  color: #262626;
+}
+.contacto__section .contacto__logo {
+  display: flex;
+  justify-content: center;
+}
+.contacto__section .contacto__logo img {
+  width: 50%;
+  margin-top: 10px;
+}
+
 /* Hero de la página principal*
 .hero-container{
     display: flex;
@@ -836,154 +967,157 @@ h3{
     animation-timing-function: ease-in-out;
 }
 
-/* Footer */
-.footer__container {
-  display: grid;
-  grid-template-columns: 0.6fr 1.2fr;
-  gap: 6px;
-  grid-template-areas: "foto pagina" "foto contacto";
-  padding-top: 30px;
+/* Footer *
+
+.footer__container{
+    display: grid; 
+    grid-template-columns: 0.6fr 1.2fr; 
+    gap: 6px; 
+    grid-template-areas: 
+        "foto pagina"
+        "foto contacto";
+    padding-top: 30px;
 }
 
-.footer__paginas {
-  display: flex;
-  flex-direction: column;
-  grid-area: pagina;
-  margin-left: 15px;
+.footer__paginas{
+    display: flex;
+    flex-direction: column;
+    grid-area: pagina;
+    margin-left: 15px;
 }
 
-.footer__imgContainer {
-  grid-area: foto;
-  width: 100px;
-  justify-self: end;
+.footer__imgContainer{
+    grid-area: foto;
+    width: 100px;
+    justify-self: end ;
 }
 
-.footer__contacto {
-  display: flex;
-  flex-direction: column;
-  grid-area: contacto;
-  margin-left: 15px;
+.footer__contacto{
+    display: flex;
+    flex-direction: column;
+    grid-area: contacto;
+    margin-left: 15px;
 }
 
-.footer__container ul {
-  padding-left: 0;
+.footer__container ul{
+    padding-left: 0;
 }
 
-.footer__container a {
-  font-size: 10px;
+.footer__container a{
+    font-size: 10px;
 }
 
-.footer__contacto p {
-  font-size: 12px;
-  margin-bottom: 6px;
-  text-align: start;
-  padding: 0;
+.footer__contacto p{
+    font-size: 12px;
+    margin-bottom: 6px;
+    text-align: start;
+    padding: 0;
 }
 
-.footer__contacto--img {
-  width: 50px;
+
+/* Página de contacto*
+
+.hero__contacto{
+    margin-top: clamp(65px, 17vw, 130px);
+    background-image: url(../img/fondorosa.jpg);
+    background-size: cover;
+    max-width: 100vw;
 }
 
-/* Página de contacto*/
-.hero__contacto {
-  margin-top: clamp(65px, 17vw, 130px);
-  background-image: url(../img/fondorosa.jpg);
-  background-size: cover;
-  max-width: 100vw;
+.hero__contacto--titulo{
+    text-align: end;
+    font-size: clamp(40px, 12vw , 60px);
+    margin-right: 10px;
 }
 
-.hero__contacto--titulo {
-  text-align: end;
-  font-size: clamp(40px, 12vw, 60px);
-  margin-right: 10px;
+.contactform__container{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 100vw;
+    margin-top: 20px;
+    background-image: url(../img/OhCherry-Background.jpg);
+    background-repeat: no-repeat;
+    background-position: right center;
 }
 
-.contactform__container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  max-width: 100vw;
-  margin-top: 20px;
-  background-image: url(../img/OhCherry-Background.jpg);
-  background-repeat: no-repeat;
-  background-position: right center;
+.contactform__img{
+    display: none;
 }
 
-.contactform__img {
-  display: none;
+.contact-form{
+    display: flex;
+    flex-direction: column;
+
 }
 
-.contact-form {
-  display: flex;
-  flex-direction: column;
+.form-floating>.form-control {
+    background-color: transparent;
+    border: 1px solid $color_primario;
+    color: $blanco;
 }
 
-.form-floating > .form-control {
-  background-color: transparent;
-  border: 1px solid #f183c3;
-  color: #fff;
-}
-
-.form-floating > label {
-  color: #f183c3;
-  font-weight: 300;
+.form-floating>label{
+    color: $color_primario;
+    font-weight: 300;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #f183c3;
-  border-color: #f183c3;
-  margin: 20px 0px;
-  font-weight: 900;
+    color: $blanco;
+    background-color: $color_primario;
+    border-color: $color_primario;
+    margin: 20px 0px;
+    font-weight: 900;
 }
 
-.btn-check:active + .btn-primary:focus, .btn-check:checked + .btn-primary:focus, .btn-primary.active:focus, .btn-primary:active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem #f183c3;
+.btn-check:active+.btn-primary:focus, .btn-check:checked+.btn-primary:focus, .btn-primary.active:focus, .btn-primary:active:focus, .show>.btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.25rem $color_primario;
 }
 
 .btn-primary:hover {
-  color: #f183c3;
-  background-color: #fff;
-  border-color: #f183c3;
+    color: $color_primario;
+    background-color: $blanco;
+    border-color: $color_primario;
 }
 
 .form-control:focus {
-  color: #fff;
-  background-color: transparent;
-  border-color: #f183c3;
-  outline: 0;
-  box-shadow: 0 0 0 0.25rem transparent;
+    color: $blanco;
+    background-color: transparent;
+    border-color: $color_primario;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem transparent;
 }
 
-.btn-check:focus + .btn-primary, .btn-primary:focus {
-  color: #f183c3;
-  background-color: transparent;
-  border-color: #f183c3;
-  box-shadow: 0 0 0 0.25rem rgba(49, 131, 253, 0);
+.btn-check:focus+.btn-primary, .btn-primary:focus {
+    color: $color_primario;
+    background-color: transparent;
+    border-color: $color_primario;
+    box-shadow: 0 0 0 0.25rem rgba(49, 131, 253, 0);
 }
 
-.contacto__section {
-  background-color: #f183c3;
-  max-width: 100vw;
-  margin-top: 30px;
-  justify-content: center;
+.contacto__section{
+    background-color: $color_primario;
+    max-width: 100vw;
+    margin-top: 30px;
+    justify-content: center;
 }
 
-.contacto__logos--container h3 {
-  font-size: 10px;
-  font-weight: 900;
-  color: #262626;
+.contacto__logos--container h3{
+    font-size: 10px ;
+    font-weight: 900;
+    color: $color_secundario;
 }
 
-.contacto__logo {
-  display: flex;
-  justify-content: center;
+.contacto__logo{
+    display: flex;
+    justify-content: center;
 }
 
-.contacto__logo img {
-  width: 50%;
-  margin-top: 10px;
+.contacto__logo img{
+    width: 50%;
+    margin-top: 10px;
 }
+
 
 /* Página de Mi historia*/
 .hero__historia {
