--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -4,6 +4,10 @@
     background-size: cover;
     max-width: 100vw;
 
+    div{
+        max-width: 1024px;
+    }
+
     h1{
         text-align: end;
         font-size: clamp(40px, 12vw , 60px);
@@ -15,20 +19,26 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    max-width: 100vw;
+    max-width: 1240px;
     margin-top: 20px;
     background-image: url(../img/OhCherry-Background.jpg);
     background-repeat: no-repeat;
     background-position: right center;
+    gap: 50px;
 
     .contactform__img{
         display: none;
+
+        @media only screen and (min-width: 992px) {
+            display: block;
+            width: 350px;
+        }
     }
 
     .contact-form{
         display: flex;
         flex-direction: column;
-    
+        justify-content: center;
     }
 }
 
@@ -78,14 +88,30 @@
 
 .contacto__section{
     background-color: $color_primario;
-    max-width: 100vw;
     margin-top: 30px;
     justify-content: center;
+
+    div{
+        display: flex;
+        max-width: 1024px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 
     .contacto__logos--container h3{
         font-size: 10px ;
         font-weight: 900;
         color: $color_secundario;
+        
+        @media only screen and (min-width: 480px) {
+                font-size: 12px;
+                margin: 6%;
+            }
+
+        @media only screen and (min-width: 768px) {
+                font-size: 15px;
+            }
     }
     
     .contacto__logo{
@@ -97,4 +123,9 @@
         width: 50%;
         margin-top: 10px;
     }
+
+    @media only screen and (min-width: 768px) {
+            background: rgb(38,38,38);
+            background: linear-gradient(180deg, rgba(38,38,38,0) 34%, rgba(241,131,195,1) 34%, rgba(241,131,195,1) 100%);
+        }
 }
