--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -16,6 +16,10 @@ p{
     max-width: 100vw;
     text-align: center;
     padding: 0.9375rem 0.625rem;
+
+    @media only screen and (min-width: 768px) {
+            font-size: 15px;
+        }
 }
 
 a{
